# starsector_system_solver

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Infrastructure.csv  LICENSE  MAXIMIZE_LOCAL_MINIMA.md  PROJECT_OVERVIEW.md  Planets.csv  README.md  Systems.csv  install.ps1  install.py  install.sh  maxed.csv  plot_pareto_frontiers.py  solver_tui.toml
.github/workflows/: ci.yml  release.yml
docs/: CLI.md
docs/releases/: v0.1.0.md  v0.1.1.md  v0.1.2.md
skills/system-solver/: SKILL.md
src/: audit_tests.rs  constants.rs  cpu_affinity.rs  lib.rs  main.rs  paths.rs  rank.rs  solve.rs  utils.rs
src/extract/: cli.rs  db.rs  gamedata.rs  locate.rs  mapping.rs  mod.rs  model.rs  save.rs  scan.rs  xml.rs
src/install/: mod.rs
src/parser/: mod.rs
src/planet/: facility.rs  mod.rs
src/solver/: astar.rs  bound.rs  cancel.rs  decomp.rs  goal.rs  mod.rs  pareto.rs  state.rs
src/solver/archive/: astar.rs  dfs.rs  mod.rs  split.rs
src/system/: mod.rs
src/tests/: economy.rs  facility.rs  mod.rs  parser.rs  planet.rs  rank.rs  solver.rs  support.rs  system.rs  tui.rs
src/tui/: app.rs  config.rs  jobs.rs  mod.rs
src/tui/screens/: mod.rs  plan.rs  rank.rs  saves.rs  settings.rs  solve.rs  system.rs
