[package]
name = "system_solver"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
csv = "1.2"
rayon = "1.10.0"
rustc-hash = "2.1.0"
nohash-hasher = "0.2.0"
clap = { version = "4", features = ["derive"] }
quick-xml = "0.37"
rusqlite = { version = "0.32", features = ["bundled"] }
serde_json = "1"
flate2 = "1"
ratatui = "0.30"
crossterm = "0.29"
serde = { version = "1", features = ["derive"] }
toml = "0.9"

[lints.rust]
unused = "allow"

[profile.release]
lto = "fat"
codegen-units = 1
