[package]
name = "system_solver"
version = "0.1.1"
edition = "2021"
rust-version = "1.74"
description = "A colony-planning solver and ranker for Starsector star systems: extracts your save, ranks discovered systems, and computes time-optimal build plans."
license = "MIT"
readme = "README.md"
repository = "https://github.com/0neye/starsector_system_solver"
keywords = ["starsector", "solver", "optimization", "game", "cli"]
categories = ["command-line-utilities", "games", "simulation"]

[dependencies]
lazy_static = "1.4.0"
csv = "1.2"
rayon = "1.10.0"
rustc-hash = "2.1.0"
nohash-hasher = "0.2.0"
clap = { version = "4", features = ["derive"] }
quick-xml = "0.37"
rusqlite = { version = "0.32", features = ["bundled"] }
serde_json = "1"
flate2 = "1"
ratatui = "0.30"
crossterm = "0.29"
serde = { version = "1", features = ["derive"] }
toml = "0.9"
directories = "5"

# Native installer support (PATH editing, Start Menu shortcut, env broadcast).
[target.'cfg(windows)'.dependencies]
winreg = "0.52"
mslnk = "0.1"
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

[lints.rust]
unused = "allow"

[profile.release]
lto = "fat"
codegen-units = 1
